# proof-gtest

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  gtest.pro  proof-gtest.pro  proofmodule.json  test_fakeserver.cpp  test_fakeserver.h  test_global.cpp  test_global.h
cmake/: proof-gtest-config.cmake
gtest/: gtest-all.cc  gtest-death-test.cc  gtest-death-test.h  gtest-filepath.cc  gtest-internal-inl.h  gtest-message.h  gtest-param-test.h  gtest-port.cc  gtest-printers.cc  gtest-printers.h  gtest-spi.h  gtest-test-part.cc  gtest-test-part.h  gtest-typed-test.cc  gtest-typed-test.h  gtest.cc  gtest.h  gtest_pred_impl.h  gtest_prod.h
gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-linked_ptr.h  gtest-param-util-generated.h  gtest-param-util.h  gtest-port-arch.h  gtest-port.h  gtest-string.h  gtest-tuple.h  gtest-type-util.h
gtest/internal/custom/: gtest-port.h  gtest-printers.h  gtest.h
gtest/proof/: test_fakeserver.cpp  test_global.cpp  test_global.h
travis/compile/: android_compile.sh  linux_compile.sh
